# image-scraper

./: .gitignore  LICENSE.txt  README.md  downloader.py  main.py  pyproject.toml  requirements.txt  selenium_test.py
src/: download_huggingface.py  imagescraper.py
src/configs/: bing.toml  google.toml
src/scraper/: downloader.py  imagescraper.py  main.py  producerconsumer.py
