[project]
name = "image_scraper"
version = "0.0.1"
authors = [
  { name="Eric Killian", email="erickill@usc.edu" },
]
description = "Xpath based image scraper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow==9.0.1",
    "requests==2.28.2",
    "selenium==4.7.2",
    "tqdm==4.64.1",
    "webdriver-manager==4.0.1",
    "toml==0.10.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/erickillian/image-scraper"
"Bug Tracker" = "https://github.com/pypa/image-scraper/issues"

[project.scripts]
image-scraper = "scraper.main:main"
